# university-itmo

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  README.md  build.gradle  cases_hello_out  cmake.sh  docker-compose.yml  example.md  graph.py  graphs.py  isa.py  launch.json  machine.py  main.tex  postgres-node.Dockefile  requirements.txt  settings.gradle  test-run.sh  translator.py
.github/workflows/: ci.yml
Term-papers/isbd-sem-5/: .gitignore
Year-1/Basics-of-professional-life/: README.md
Year-1/Communication-and-team-building/: README.md
Year-1/Informatics/: README.md
Year-1/Physics/: README.md
Year-1/Programming/: README.md
Year-2/Computational-math/: .gitignore  Makefile  README.md  file  pyrightconfig.json  run
Year-2/Cxx-itiviti/03-any/: .gitignore  CMakeLists.txt  README.md  launch.json
Year-2/Cxx-itiviti/03-any/include/: Any.h
Year-2/Cxx-itiviti/03-any/src/: main.cpp
Year-3/Low-level-programming/lab-1/: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake.sh  launch.json
Year-3/Low-level-programming/lab-1/app/: test3.c
Year-3/Low-level-programming/lab-1/include/: class.h  database.h  database_meta.h  dbmeta.h  sections.h  util.h
Year-3/Low-level-programming/lab-1/include/sections/: base.h  base_util.h  data.h  database.h  hash.h  page.h  table.h  tmp.h
Year-3/Low-level-programming/lab-1/src/: base.c  data.c  database.c  database_meta.c  database_section.c  database_table.c  database_typle.c  dbmeta.c  main.c  sso.c
Year-3/Low-level-programming/lab-1/src/dbms/: op_table.c  page.h  pagealloc.h  table_dist.h
Year-3/Low-level-programming/lab-1/src/dbms/dto/: dto_table.c
Year-3/Low-level-programming/lab-1/src/dbms/io/: p_base.h
Year-3/Low-level-programming/lab-1/src/dbms/io/page/: index.h  p_container.c  p_database.c  p_slot.c  p_slot.h  sso.c
Year-3/Low-level-programming/lab-1/src/lib/: base.c  database.c  database_meta.c  database_table.c  table.c
Year-3/Low-level-programming/lab-1/src/util/: print_page.c
Year-3/Low-level-programming/lab-1/test/: alltests.cpp  database.cpp  ds.cpp  dto_table.cpp  first.cpp  pagealloc.cpp  second.cpp  sso.cpp  table.cpp
Year-3/Low-level-programming/lab-3/client/: CMakeLists.txt
Year-3/Low-level-programming/lab-3/dbms/src/: CMakeLists.txt  plan.c  plan_filter.h  plan_funcs.c  table.c
Year-3/Low-level-programming/lab-3/dbms/src/dbms/: iter.c  iter.h  op_schema.c  op_schema.h  op_table.c  op_table.h  sso.h  table.c  table_dist.h
Year-3/Low-level-programming/lab-3/dbms/src/dbms/converters/: table.c
Year-3/Low-level-programming/lab-3/dbms/src/dbms/core/: dbfile.h
Year-3/Low-level-programming/lab-3/dbms/src/dbms/dto/: dto_row.c  dto_table.c
Year-3/Low-level-programming/lab-3/dbms/src/dbms/io/: meta.c  p_base.c  p_database.h
Year-3/Low-level-programming/lab-3/dbms/src/dbms/io/meta/: meta.h
Year-3/Low-level-programming/lab-3/dbms/src/dbms/io/page/: p_base.h  p_container.c  p_container.h  p_database.c  p_slot.c  p_table.c  sso.c
Year-3/Low-level-programming/lab-3/dbms/src/util/: printers.c
app/: main.c  main.cpp  test.c  test2.c
arc/: CMakeLists.txt
backend/: README.md  requirements.txt
backend/medlenno/: main.py
cases/: cat  cat.asm  cat_in-foo  cat_out  hello_in  prob2  prob2-with-io_in
client/: CMakeLists.txt  main.cpp
client/apps/: main.cpp
client/src/: main.cpp  parse.y
config/: pmd.xml
constrs/: Nexys-A7-100T-Master.xdc
dbms/: CMakeLists.txt  test.py
dbms/tests/: CMakeLists.txt  alltests.cpp  database.cpp  pagealloc.cpp  performance.cpp  schema.cpp  sso.cpp  table.cpp  types.cpp
doc/: .gitignore  .~lock.report.odt#  02-input.tex  Makefile  build.sh  config.tex  content.md  fdc-lab2.drawio  main.tex  notes.md  report.docx  report.odt  schematics-general.drawio  schematics.drawio
examples/: prob2  prob2_out
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
include/: ast.hpp  database.h  dbmeta.h  dbtypes.h  plan_filter.h  qpg.hpp  subtok.hpp
proto/: CMakeLists.txt
proto/cmake/: cpp.cmake
proto/dbpb/: address.proto  addressbook.proto  ast.proto  database.proto  hello.proto
qpg/: CMakeLists.txt
qpg/apps/: main.cpp
qpg/doc/: report.odt
qpg/include/qpg/: ast.hpp  qpg.hpp
qpg/src/: CMakeLists.txt  parse.l  parse.y  qpg.cpp
scripts/: merge-as-subdir.sh
server/: .gitignore  CMakeLists.txt  main.cpp
server/app/: test.c  test2.c  test4.c
server/docs/: report.odt
server/include/: dto_table.h  schema.h
server/include/dbms/: dto_table.h  plan.h  plan_funcs.h
server/include/util/: column_types.h  internals.h  printers.h
server/src/: converters.cpp  converters.hpp  main.cpp  plan.c  plan_filter.c  plan_filter.h  test.cpp
server/src/dbms/: iter.h  op_dbms.c  op_schema.h  sso.c
server/src/dbms/converters/: table.h
server/src/dbms/core/: dbfile.h  dbms.h
server/src/dbms/dto/: dto_table.h
server/src/dbms/io/: meta.c  p_base.h  p_database.c
server/src/dbms/io/meta/: meta.h
server/src/dbms/io/page/: p_base.h  sso.h
server/src/util/: printers.h
server/test/: types.cpp
server/tests/: alltests.cpp  performance.cpp  table.cpp  types.cpp
src/: .gitignore  amplitude.v  ast.cpp  bits2cat.v  buffer_lru.v  buffer_lru_tb.sv  button_debouncer.v  clap_controller.v  clap_detector.v  clap_state.v  data.c  database.c  database.h  database_typle.c  dbmeta.c  dbms.h  dbtypes.h  displayer.v  freq_div.v  isa.py  logic.v  logic_controller.v  logic_state.v  machine.py  main.v  mic_configurator.v  parse.l  parse.y  plan.c  plan.h  plan_filter.h  plan_funcs.c  po_ptr.h  prob2-true.asm  prob2-true.sh  qpg.cpp  schema.c  sr_cpu.vh  sso.c  sso.h  (+9 more)
test/: alltests.cpp  cat.asm  database.cpp  dto_table.cpp  hello  hello.asm  integrational_test.py  machine_test.py  pagealloc.cpp  prob-test.asm  prob2  prob2.asm  schema.cpp  sso.cpp  table.cpp  translator_test.py  types.cpp  unit_isa_test.py  unit_machine_test.py  unit_translator_test.py
uart/: config.md
История/: ~$История Прибалтики в межвоенный период.pptx
КиК. Конспект/: main.tex
(+2258 files in other folders)
